fix comments spacing

--- a/src/components/comments/comments.css
+++ b/src/components/comments/comments.css
@@ -240,7 +240,7 @@
 }
 
 .comment p {
-    display: contents;
+    margin: 0.5em 0 0.5em 0;
 }
 
 .comment-actions {
