--- a/src/components/item-carousel/item-carousel.css
+++ b/src/components/item-carousel/item-carousel.css
@@ -39,6 +39,7 @@
     border: none;
     border-radius: 0;
     color: var(--site-background-color);
+    outline: none;
 }
 
 .carousel-button:hover {
